Fix overflow hiding nav

--- a/src/assets/toolkit/styles/6-components/navigation/_components.sidemenu.scss
+++ b/src/assets/toolkit/styles/6-components/navigation/_components.sidemenu.scss
@@ -249,6 +249,14 @@ $sidemenu-bg-light: $white;
     margin-bottom: 0;
 
     .sidemenu-toggle {
+
+      color: $black-tundora;
+
+      .tereo-title {
+        display: block;
+        color: $green-brand;
+        font-weight: 500;
+      }
       + ul { display: none; } // The menu
       &.expanded + ul { display: block; }
     }
